examples/bad/no-main.elina
var x: string = "main";

fn notMain(): void {
}